--- a/.gitignore
+++ b/.gitignore
@@ -211,6 +211,7 @@ bh_unicode_properties.cache
 GitHub.sublime-settings
 
 ### VisualStudioCode ###
+.vscode/
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -223,4 +224,5 @@ GitHub.sublime-settings
 .idea/
 
 migrations/
+
 
