--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,17 @@
-Django==2.0.2
-django-filter==1.1.0
+astroid==1.6.1
+autopep8==1.3.4
+Django==2.1.3
+django-filter==2.0.0
 docutils==0.14
-ipython==6.2.1
-ipython-genutils==0.2.0
-isort==4.3.4
-jedi==0.11.1
+isort==4.3.3
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 mysqlclient==1.3.13
-parso==0.1.1
-pep8==1.7.1
-pexpect==4.4.0
-pickleshare==0.7.4
-Pillow==5.0.0
+Pillow==5.1.0
 pkg-resources==0.0.0
-prompt-toolkit==1.0.15
-ptyprocess==0.5.2
 pycodestyle==2.3.1
-Pygments==2.2.0
 pylint==1.8.2
-pytz==2018.3
-selenium==3.9.0
-simplegeneric==0.8.1
+pytz==2017.3
+selenium==3.8.0
 six==1.11.0
-traitlets==4.3.2
-wcwidth==0.1.7
 wrapt==1.10.11
