--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,11 @@
 version: '3'
 
 services:
+  redis_cache:
+    image: redis
+    restart: always
+    ports:
+      - "6379:6379"
   postgres_db:
     image: postgres
     restart: always
@@ -10,13 +15,14 @@ services:
       - POSTGRES_DB=webstore
     ports:
       - "5433:5432"
-  web:
+  webstore:
     build: .
+    volumes:
+      - .:/home/project
     command: ./manage.py runserver 0.0.0.0:8000
     restart: always
-    volumes:
-      - .:/home/project/dev
     ports:
       - "8000:8000"
     depends_on:
       - postgres_db
+      - redis_cache
