--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     container_name: webstore_redis_cache
     ports:
       - "6379:6379"
+
   postgres_db:
     image: postgres
     restart: always
@@ -17,12 +18,13 @@ services:
       - POSTGRES_DB=webstore
     ports:
       - "5433:5432"
+
   webstore:
     build: .
     container_name: django_webstore
     volumes:
       - .:/home/project
-    command: ./manage.py runserver 0.0.0.0:8000
+    command: ./manage.py runserver 0.0.0.0:8000 --settings=config.settings.docker
     restart: always
     ports:
       - "8000:8000"
