--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,24 @@
+amqp==1.4.9
+anyjson==0.3.3
 astroid==1.6.1
+billiard==3.3.0.23
+celery==3.1.25
 Django==2.1.3
+django-celery==3.2.2
 django-filter==2.0.0
+django-redis==4.10.0
 docutils==0.14
 isort==4.3.3
+kombu==3.0.37
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 Pillow==5.1.0
+psycopg2==2.7.6.1
+psycopg2-binary==2.7.6.1
+python-memcached==1.59
 pytz==2017.3
+redis==3.0.1
 selenium==3.8.0
 six==1.11.0
+vine==1.2.0
 wrapt==1.10.11
-psycopg2==2.7.6.1
-django-redis==4.10.0
-psycopg2-binary==2.7.6.1
-celery==4.2.1
